--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             
             <nav class="Nav">
                 <ul>
-                    <li><a href="Index.html"> Home</a></li>
+                    <li><a href="index.html"> Home</a></li>
                     <li><a href="AboutMe.html">About me</a></li>
                     <li><a href="PreviousProjects.html">Projects</a></li>
                     <li><a href="Skills.html">Skills</a></li>
