Eddited multiple things. fixed bugs

--- a/Skills.html
+++ b/Skills.html
@@ -57,12 +57,12 @@
 
         <footer class="Footer">
             <figure class="GitHubImage">
-                <a href="https://github.com/S4lt1"> 
+                <a href="https://github.com/FreekPluim" target="_blank"> 
                     <img src="IMG/GitHub.png" alt="GitHub">
                 </a> 
             </figure>
             <figure>
-                <a href="https://www.linkedin.com/in/freek-pluim-b41683132/"> 
+                <a href="https://www.linkedin.com/in/freek-pluim-b41683132/" target="_blank"> 
                     <img src="IMG/linkedin.png" alt="LinkedIn">
                 </a> 
             </figure>
