--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="blockA">
             <main class="MainAboutMe">
                 <section class="AboutMe">
-                    <h1>About me</h1>
+                    <h3>About me</h3>
                     <p>
                         My name is Freek Pluim, I'm a 21 years old student at Saxion university for applied sciences in Enschede, in the study Creative Media and Game Technology (CMGT).
                     </p>
@@ -66,14 +66,14 @@
                     <h3>Achievements</h3>
                     <h1>School Projects</h1>
                     <ul>
-                        <li><a href="https://annevxrbk.com/">Got Nobody</a></li>
-                        <li>The Blood Night</li>
-                        <li>TrickShot</li>
+                        <li><a href="PreviousProjects.html#GotNobody">Got Nobody</a></li>
+                        <li><a href="PreviousProjects.html#TheBloodNight">The Blood Night</a></li>
+                        <li><a href="PreviousProjects.html#TrickShot">TrickShot</a></li>
                     </ul>
                     
                     <h1>Jams</h1>
                     <ul>
-                        <li><a href="https://itch.io/jam/global-game-jam-nl-2021/rate/902895"> Global GameJam 2021</a></li>
+                        <li><a href="PreviousProjects.html#GGJ2021"> Global GameJam 2021</a></li>
                     </ul>
                 </section>
 
@@ -87,12 +87,12 @@
 
         <footer class="Footer">
             <figure class="GitHubImage">
-                <a href="https://github.com/S4lt1"> 
+                <a href="https://github.com/FreekPluim" target="_blank"> 
                     <img src="IMG/GitHub.png" alt="GitHub">
                 </a> 
             </figure>
             <figure>
-                <a href="https://www.linkedin.com/in/freek-pluim-b41683132/"> 
+                <a href="https://www.linkedin.com/in/freek-pluim-b41683132/" target="_blank"> 
                     <img src="IMG/linkedin.png" alt="LinkedIn">
                 </a> 
             </figure>
