--- a/AboutMe.html
+++ b/AboutMe.html
@@ -12,13 +12,11 @@
     <body>
         <header class="Header">
             <figure class="Banner"><img src="IMG/banner.png" alt="Banner"></figure>
-            
             <nav class="Nav">
                 <ul>
                     <li><a href="index.html"> Home</a></li>
                     <li><a href="AboutMe.html">About me</a></li>
                     <li><a href="PreviousProjects.html">Projects</a></li>
-                    <li><a href="Skills.html">Skills</a></li>
                 </ul>
             </nav>
         </header>
@@ -27,7 +25,7 @@
             <h1>About me</h1>
             <section class="MainIndex">
                 <article>
-                    <p>My name is Freek Pluim, i'm 21 years guy from the Netherlands. I study at Saxion School for Applied Science in the study Creative Media and Game Technology (CMGT). My main drive is to become a Game Developer.</p>
+                    <p>My name is Freek Pluim, i'm 22 years guy from the Netherlands. I study at Saxion School for Applied Science in the study Creative Media and Game Technology (CMGT). My main drive is to become a Game Developer.</p>
 
                     <p>From 2015 untill 2020 i followed a study at Aventus in Deventer. From this i have a degree in Secondary vocational education level 4 ICT. In this study i also realised that i really like the activity of programming. Going from this i started looking for another study that i could do after i got my degree, ending up at Saxion.</p>
                     
@@ -38,7 +36,7 @@
                     <p>In my free time i mostly watch series, scroll the internet, work on school or personal projects. I also play volleybal about 2x a week and i train for survival runs.</p>
                 </article>
 
-                <figure><img src="IMG/Picture.png" alt="Me"></figure>
+                <figure><img src="IMG/CV Pictur (2).PNG" alt="Me"></figure>
             </section>
         </main>
 
