--- a/Skills.html
+++ b/Skills.html
@@ -29,28 +29,39 @@
             <h2>Languages</h2>
             <article class="Languages">
                 <section>
-                    <h3>Java</h3>
-                    <p>All my experience with Java comes from working with Processing. For the first term of the first year of school we worked with Processing to make a point and click adventure game. The result of this you can see <a href="PreviousProjects.html">Here</a></p>
+                    <figure class="JavaImage">
+                        <img src="IMG/Java.png" alt="Java">
+                    </figure>
                 </section>
                 <section>
-                    <h3>C#</h3>
-                    <p>Working with C# i have as of yet created 2 games with an engine called GXPEngine. It is an engine created by a teacher of ours that works fully in C# and is completely code based. In this engine we created 2 games for projects which you can both find on the <a href="PreviousProjects.html">Projects Page</a>. And right now we are working on projects in Unity also using C#</p>
+                    <figure class="C#Image">
+                        <img src="IMG/C.png" alt="C#">
+                    </figure>
                 </section>
                 <section>
-                    <h3>HTML / CSS</h3>
-                    <p>This entire website was build by me using HTML and CSS.</p>
+                    <figure class="HTML/CSSImage">
+                        <img src="IMG/html-css.png" alt="HTML/CSS">
+                    </figure>
+                </section>
+                <section>
+                    <figure class="Angular13Image">
+                        <img src="IMG/angular.png" alt="Angular13">
+                    </figure>
+                    
                 </section>
             </article>
             
             <h2>Engines</h2>
             <article class="Engines">
                 <section>
-                    <h3>Unity</h3>
-                    <p>Unity experience comes mostly from School and the Global GameJam 2021.</p>
+                    <figure class="UnityImage">
+                        <img src="IMG/Unity.png" alt="Unity">
+                    </figure>
                 </section>
                 <section>
-                    <h3>Processing</h3>
-                    <p>I worked with Processing for about 3 months. getting a good grasp on it capeabilities.</p>
+                    <figure class="ProcessingImage">
+                        <img src="IMG/Processing.png" alt="Processing">
+                    </figure>
                 </section>
             </article>
         </main>
