--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                     <li><a href="index.html"> Home</a></li>
                     <li><a href="AboutMe.html">About me</a></li>
                     <li><a href="PreviousProjects.html">Projects</a></li>
-                    <li><a href="Skills.html">Skills</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,14 +25,14 @@
                 <section class="AboutMe">
                     <h3>About me</h3>
                     <p>
-                        My name is Freek Pluim, I'm a 21 years old student at Saxion university for applied sciences in Enschede, in the study Creative Media and Game Technology (CMGT).
+                        My name is Freek Pluim, I'm a 22 years old student at Saxion university for applied sciences in Enschede, in the study Creative Media and Game Technology (CMGT).
                     </p>
                     <p>
                         I live at home with my 2 parents and my older brother. My hobby's are Volleybal, Survival, Gaming and doing random things i find on the internet (Learning new languages, Drawing, Trying to make video games, etc.).
                     </p>
                     <br>
                     <h3>Background</h3>
-                    <p>
+                    <p class="bottomOfAboutMe">
                         I studied at Aventus in Deventer for 4 years. Getting a degree in Secondary vocational education level 4 ICT. In here getting some work experience on the IT helpdesk.
                     </p>
                 </section>
@@ -42,18 +41,20 @@
                     <h1>Skills</h1>
                     <section class="blockSkills">
                         <section class="Languages">
-                            <h3>Programming Languages</h3>
+                            <h3>Languages</h3>
                             <ul>
                                 <li>Java</li>
                                 <li>C#</li>
                                 <li>HTML5</li>
                                 <li>CSS3</li>
+                                <li>Angular</li>
                             </ul>
                         </section>
                         <section class="Engines">
                             <h3>Engines</h3>
                             <ul>
                                 <li>Unity</li>
+                                <li>Processing</li>
                             </ul>
                         </section>
 
@@ -74,13 +75,14 @@
                     <h1>Jams</h1>
                     <ul>
                         <li><a href="PreviousProjects.html#GGJ2021"> Global GameJam 2021</a></li>
+                        <li><a href="PreviousProjects.html#GGJ2022"> Global GameJam 2022</a></li>
                     </ul>
                 </section>
 
                 <section class="Updates">
                     <h1>Status Updates</h1>
-                        <a class="twitter-timeline" data-lang="en" data-height="400" data-theme="dark" href="https://twitter.com/freekpluim?ref_src=twsrc%5Etfw">Tweets by freekpluim</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </section>
+                        <a class="twitter-timeline" data-lang="en" data-height="400" width="530px" href="https://twitter.com/freekpluim?ref_src=twsrc%5Etfw">Tweets by freekpluim</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </section>
 
             </aside>
         </section>
